--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pymysql==1.1.0
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.3.0
 jinja2==3.1.2
 requests==2.31.0
 PyJWT==2.8.0
