--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
 pymysql==1.1.0
+cryptography==41.0.7
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
